tooling/nargo_cli/tests/snapshots/execution_success/nested_arrays_from_brillig/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 6]):
    (no terminator instruction)
}
